@@ -5,6 +5,7 @@ from hachoir_metadata.metadata import extractMetadata
 # each module use registerExtractor() method
 import hachoir_metadata.archive
 import hachoir_metadata.audio
+import hachoir_metadata.file_system
 import hachoir_metadata.image
 import hachoir_metadata.jpeg
 import hachoir_metadata.misc
